Chart overflow fixes on small screens.

--- a/src/components/ForecastDisplay/styles.scss
+++ b/src/components/ForecastDisplay/styles.scss
@@ -115,5 +115,9 @@
 
   .rd3-chart {
     overflow: visible;
+    max-width: 100%;
+  }
+  .summary {
+    text-align: center;
   }
 }
